# tip-compiler-extensions-project

./: .gitignore  README.md  SOLUTION-D2.md  SOLUTION-D3.md  SOLUTION-D4.md  SOLUTION-FINAL.md  SOLUTION.md  autotest.py  bench.py  fib  out.txt  quickBench.sh  quickComp.sh  quickTest.sh  siptest.sip
src/: tipc.cpp
src/codegen/: CodeGenFunctions.cpp
src/frontend/ast/: ASTBuilder.cpp  ASTBuilder.h  ASTVisitor.h  CMakeLists.txt
src/frontend/ast/treetypes/: AST.h  ASTRecordExpr.cpp
src/frontend/ast/treetypes/newtreetypes/: ASTAndExpr.cpp  ASTAndExpr.h  ASTArrayExpr.cpp  ASTArrayExpr.h  ASTArrayLengthExpr.cpp  ASTArrayLengthExpr.h  ASTDecrementStmt.cpp  ASTDecrementStmt.h  ASTElementRefrenceOperatorExpr.cpp  ASTElementRefrenceOperatorExpr.h  ASTFalseExpr.cpp  ASTFalseExpr.h  ASTForIterStmt.cpp  ASTForIterStmt.h  ASTForRangeStmt.cpp  ASTForRangeStmt.h  ASTIncrementStmt.cpp  ASTIncrementStmt.h  ASTNegationExpr.cpp  ASTNegationExpr.h  ASTNotExpr.cpp  ASTNotExpr.h  ASTOfArrayExpr.cpp  ASTOfArrayExpr.h  ASTOrExpr.cpp  ASTOrExpr.h  ASTTernaryExpr.cpp  ASTTernaryExpr.h  ASTTrueExpr.cpp  ASTTrueExpr.h
src/frontend/prettyprint/: PrettyPrinter.cpp  PrettyPrinter.h
src/optimizer/: Optimizer.cpp  Optimizer.h
src/semantic/: SemanticAnalysis.cpp  SemanticAnalysis.h
src/semantic/types/: CMakeLists.txt
src/semantic/types/concrete/: TipArray.cpp  TipArray.h  TipBool.cpp  TipBool.h  TipCons.cpp  TipTypeVisitor.h  Type.h
src/semantic/types/constraints/: TypeConstraintVisitor.cpp  TypeConstraintVisitor.h
src/semantic/types/solver/: Substituter.cpp  Substituter.h
src/semantic/weeding/: CheckAssignable.cpp  CheckAssignable.h
test/optimizer/: base.tip  bigBandTest.sip  combine.tip  deadArg.sip  deadloop.tip  funInline.sip  hotColdSplitting.sip  licm.tip  load.tip  mergeFunctions.sip  partialInline.sip  rep.tip  rotate.tip  sink.tip  unroll.tip
test/system/: run.sh
test/system/siptests/: and-.expected  and.tip  arrayIndex.tip  arrayLength.tip  binary-.expected  binary.tip  dec-.expected  dec.tip  decrement.tip  false.tip  foriter.tip  foriter2.tip  forrange-.expected  forrange.tip  forrange2-.expected  forrange2.tip  inc-.expected  inc.tip  increment-.expected  increment.tip  negation-.expected  negation.tip  not.tip  ofArray.tip  or.tip  or2.tip  ternary.tip  true.tip
test/unit/frontend/: ASTPrinterTest.cpp  CMakeLists.txt  PrettyPrinterTest.cpp  PrettyPrinterTestNew.cpp  SIPParserTest.cpp  TIPParserTest.cpp
test/unit/semantic/: CheckAssignableTest.cpp
test/unit/semantic/cfa/: CallGraphTest.cpp
test/unit/semantic/types/: CMakeLists.txt
test/unit/semantic/types/concrete/: TipArrayTest.cpp  TipBoolTest.cpp
test/unit/semantic/types/constraints/: TypeConstraintCollectTest.cpp
test/unit/semantic/types/solvers/: UnifierTest.cpp
tipg4/: TIP.g4
